Update 'mvsgeuz31-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:39f2a4b894088f9a7a4b7a085e3ed5e3bfb275de@sha256:c9c64691f2496653c933cf63c2459bbf69563af6eb52f5555af00f1b01b2af8e

--- a/components/mvsgeuz31-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/mvsgeuz31-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mvsgeuz31-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:39f2a4b894088f9a7a4b7a085e3ed5e3bfb275de@sha256:c9c64691f2496653c933cf63c2459bbf69563af6eb52f5555af00f1b01b2af8e
+          name: container-image
